# Image-Editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
App/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
App/Controller/: Application.cpp  Application.h  CMakeLists.txt
App/Model/: CMakeLists.txt  EditorState.cpp  EditorState.h
App/View/: CMakeLists.txt  UIManager.cpp  UIManager.h  Utils.cpp  Utils.h
App/View/UI/: EditorThemes.cpp  EditorThemes.h  UI.cpp  UI.h  UI.tpp
App/View/UI/Fonts/: font_roboto.hf  font_roboto_bold.hf
Libs/: CMakeLists.txt
Libs/Canvas/: CMakeLists.txt
Libs/Canvas/include/Canvas/: Canvas.h  Image.h
Libs/Canvas/src/: Canvas.cpp
Libs/Renderer/: CMakeLists.txt
Libs/Renderer/include/Renderer/: Renderer.h
Libs/Renderer/src/: Renderer.cpp
Libs/Window/: CMakeLists.txt
Libs/Window/include/Window/: Window.h
Libs/Window/src/: Window.cpp
effects/: convert.h  effects.h
effects/src/: blur.cpp  canny.cpp  convert.cpp  seam_carving.cpp  simple.cpp
libs/src/: stb_implementation.cpp
utils/: convolution.h  loader.h  sobel.h
utils/src/: convolution.cpp  loader.cpp  sobel.cpp
